Fixed profile picture stretching

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -594,6 +594,10 @@
     top: 0;
 }
 
+.profile-picture, .profile-picture img {
+    object-fit: cover;
+}
+
 .profile-banner {
     height: auto;
     object-position: 50% 10%;
